Expand member dashboard data and UI
